fix bg height on mobile

--- a/components/SP.module.css
+++ b/components/SP.module.css
@@ -1,6 +1,6 @@
 .bg_container {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
